# stack

./: .gitignore  CMakeLists.txt  Makefile  config.h  main.cpp  stack.cpp  stack.h  stack_logs.cpp  stack_logs.h  stack_verification.cpp  stack_verification.h  tests.cpp  utils.cpp  utils.h
